--- a/css/lists.css
+++ b/css/lists.css
@@ -179,7 +179,6 @@
     color: #fff;
     width: 28px;
     height: 28px;
-    border-radius: 4px;
     display: flex;
     align-items: center;
     justify-content: center;
